    http://sourceforge.net/support/tracker.php?aid=1467150

----------------------------------------------------------------------
1.6.0 RC12
Contains new Open Document filter, replaces a docking library, and
fixes a few regressions of RC11.

 Enchancements:

  - [OpenDocument] Support for inserted OpenDocument files
    http://sourceforge.net/support/tracker.php?aid=1218002

  - [OpenDocument] Upgrade 1.6.0 RC7-R11 TMXs to new filter 
    http://sourceforge.net/support/tracker.php?aid=1523768

  - [OpenDocument] Upgrade 1.4.x TMXs to new filter 
    http://sourceforge.net/support/tracker.php?aid=1523773

  - Upgrade TMXs from paragraph to sentence segmentation
    http://sourceforge.net/support/tracker.php?aid=1527082

  - Individual file statistics should list relative file paths
    http://sourceforge.net/support/tracker.php?aid=1518109

  - Exact OmegaT version in TMX
    http://sourceforge.net/support/tracker.php?aid=1436563

 Bugfixes:

  - [OpenDocument] Writer headers and footers not honored
    http://sourceforge.net/support/tracker.php?aid=1111950

  - [OpenDocument] Footnote markers break sentences
    http://sourceforge.net/support/tracker.php?aid=1461154

  - [OpenDocument] Tracked changes add unnecessary data
    http://sourceforge.net/support/tracker.php?aid=1461178

  - [Regression] Wrong saved path for project folders
    http://sourceforge.net/support/tracker.php?aid=1519052

  - [Regression] Buggy Docking Library
    http://sourceforge.net/support/tracker.php?aid=1518026

  - Encoding problem with project_stats.txt file
    http://sourceforge.net/support/tracker.php?aid=1518101

----------------------------------------------------------------------
1.6.0 RC11b
Fixes two nasty regressions of RC11. Sorry for inadequate testing everyone.

 Bugfixes:

 - Glossary displays source=source
   http://sourceforge.net/support/tracker.php?aid=1516395

 - Insert/replace with match does not work
   http://sourceforge.net/support/tracker.php?aid=1516807
